Edited the outline

--- a/main.tex
+++ b/main.tex
@@ -20,11 +20,14 @@
 
 Think about a new outline: 
 - Introduce quantities, manifolds, etc. as before. 
-- K-vectors
-- Outer product
-- Symplectic form
+- vector as infinitesimal displacement/"line"
+- Outer product and K-vectors and infinitesimal K-surfaces
 - K-forms as functions of k-vectors
-- Inner product
+- Integration
+- Stokes theorem in diff form
+Ch 3
+- Symplectic geom (form, ...)
+- Riem geom (Inner product, ..)
 - ???
 
 
